Bug #13276 : Fix original filename & tree generation
- Truncate filenames to 150 chars max
- Truncate folder names to 100 chars max (per folder)
- Use _<guid> suffix on path collision OR truncation (to avoid collision after truncation)
- Fix collision detection (now applied on a path level)
- Fix truncation overflow (file extension length limitation & per-level truncation)
- Fix title extraction (from Title, then Title_.fr, then Title_.{first_lang})
- Fix multi-rattachement detection
- Cleanup

Fixes multiple bugs : #13276, #13273, #13271, #13266, #13284, #13267, #13174